# Synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
Archive/: LPF.cpp  LPF.hpp  LPFControlWidget.cpp  LPFControlWidget.hpp
data/: components.txt
documentation/archive/presets/: presets.md
documentation/modules/: module_specification.md
include/: ADSR.hpp  BiquadFilter.hpp  Component.hpp  Connection.hpp  CoreAudioWaveMaker.hpp  Event.hpp  FilterMode.hpp  Globals.hpp  Input.hpp  LPF.hpp  Mixer.cpp  Mixer.hpp  Note.hpp  NoteInput.hpp  Oscillator.hpp  SignalInput.hpp  Synth.hpp  SynthComponent.hpp  SynthComponentFactory.hpp  VoiceAllocator.hpp  WaveType.hpp
include/CustomUI/: DragOnlyDial.hpp
include/UI/: BiquadFilterControlWidget.hpp  Control.hpp  EmptySlot.hpp  LPFControlWidget.hpp  OscillatorControlWidget.hpp
include/UI/Components/: ADSRControl.hpp  ADSRControlWidget.hpp  BiquadFilterControl.hpp  BiquadFilterControlWidget.hpp  MixerControl.hpp  OscillatorControl.hpp  OscillatorControlWidget.hpp  SynthControl.hpp  SynthControlWidget.hpp
src/: ADSR.cpp  BiquadFilter.cpp  LPF.cpp  Mixer.cpp  Note.cpp  Oscillator.cpp  Synth.cpp  SynthComponent.cpp  SynthComponentFactory.cpp  main.cpp
src/CustomUI/: DragOnlyDial.cpp
src/UI/: ADSRControlWidget.cpp  BiquadFilterControlWidget.cpp  Control.cpp  EmptySlot.cpp  OscillatorControlWidget.cpp  SynthControlWidget.cpp
src/UI/Components/: ADSRControl.cpp  ADSRControlWidget.cpp  BiquadFilterControl.cpp  BiquadFilterControlWidget.cpp  MixerControl.cpp  OscillatorControl.cpp  OscillatorControlWidget.cpp  SynthControl.cpp  SynthControlWidget.cpp
